# rust_company_api

./: .env  Cargo.toml  README.md  docker-compose.yml  rust_company_api.postman_collection.json
migrations/: 20240117191858_tuesday_17_Jan_2024.sql
src/: main.rs
src/business/: mod.rs
src/business/entities/: company.rs  country.rs
src/business/use_cases/: mod.rs
src/business/use_cases/company/: create_company.rs  create_company_test.rs  get_companies_by_continent.rs  get_companies_by_continent_test.rs  get_companies_by_country.rs  get_companies_by_country_test.rs  get_company_by_id.rs  get_company_by_id_test.rs  log_companies.rs  mod.rs  save_company.rs
src/business/use_cases/country/: create_country.rs  create_country_test.rs  mod.rs
src/http/contracts/: company.rs  country.rs
src/http/services/: company.rs  company_test.rs  country.rs  country_test.rs  health.rs  mod.rs
src/repositories/: company_repository.rs  country_repository.rs  mod.rs
