[package]
name = "rust-user-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"
dotenv = "0.15.0"
dotenvy = "0.15"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres", "uuid", "chrono"] }
async-trait = "0.1.51"
mockall = "0.10.2"
tokio = "1.35.1"
actix-rt = "2.9.0"